--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -78,7 +78,7 @@
 				<p><li><a href="LectureNotes/Chapter3/S5ThomasComplete.pdf">Section 3.5 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S6ThomasComplete.pdf">Section 3.6 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S7S8Flipped.pdf">Sections 3.7 (Worksheet) and 3.8 Complete</a></li></p>
-				<p><li><a href="LectureNotes/Chapter3/S9Thomas(Outline).pdf">Section 3.9 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter3/S9ThomasComplete.pdf">Section 3.9 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S10Thomas(Outline).pdf">Section 3.10 (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter3/S10ThomasPartII(Outline).pdf">Section 3.10 Part II (Outline)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter4/S1Thomas(Outline).pdf">Section 4.1 (Outline)</a></li></p>
