--- a/courses/141/Spring18/Quizzes.html
+++ b/courses/141/Spring18/Quizzes.html
@@ -56,12 +56,13 @@
 				<p><li><a href="Quiz1C.pdf">Quiz 1 - Ch. 1</a></li></p>
 				<p><li><a href="S18Quiz2.pdf">Quiz 2 - Sections 2.2, 2.4, 2.5</a></li></p>
 				<p>Quiz 3 - Attendance Quiz</p>
-				<p>Quiz 4 - Basic Derivative Rules</p>
-				<p><li><a href="S18Quiz5Ch3S78.pdf">Quiz 5</a></li></p>
+				<p><li><a href="S18Quiz4.pdf">Quiz 4 - Basic Derivative Rules</a></p>
+				<p><li><a href="S18Quiz5Ch3S78.pdf">Quiz 5 - 3.6, 3.7</a></li></p>
+				<p>Quiz 6 - 3.8, 3.9</p>
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
 				<p><li><a href="141S18Quiz2Sols.pdf">Quiz 2 - Sections 2.2, 2.4, 2.5</a></li></p>
-				<p>Quiz 4 - (Will be uploaded soon)</p>
+				<p><li><a href="S18Quiz4Sols.pdf">Quiz 4 - Basic Derivative Rules</a></p>
 				<p><li><a href="S18Quiz5Sols.pdf">Quiz 5 - Sections 3.6, 3.7</a></li></p>
 				<!--<p><li><a href="quiz6Sols.pdf">Quiz 6 - Sections 3.7, 3.8</a></li></p>
 				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
