--- a/courses/141/Spring18/Worksheets.html
+++ b/courses/141/Spring18/Worksheets.html
@@ -57,10 +57,12 @@
 				<p><li><a href="FunctionPlacematSolutions.jpg">Recitation Function Placemat</a></li></p>
 				<p><li><a href="141Ch1ReviewSols.pdf">Dr. Girardi's Chapter 1 In-Class Review</a></li></p>
 				<!--<p><li><a href="DefinitionofDerivative.pdf">Derivative Practice</a></li></p>
-				<p><li><a href="gradeThisQuizSols.pdf">Grade This Quiz Solutions (Recitation Derivative Practice)</a></li></p>
-				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation</a></li></p>
-				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates</a></li></p>
-				<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
+				<p><li><a href="gradeThisQuizSols.pdf">Grade This Quiz Solutions (Recitation Derivative Practice)</a></li></p>-->
+				<p><li><a href="DerivativeWorksheet.pdf">48 Derivatives (Solutions on page 2)</a></li></p>
+				<p><li><a href="ImplicitDifferentiationWorksheetSols.pdf">Implicit Differentiation - Extra Practice</a></li></p>
+				<p><li><a href="RelatedRatesSols.pdf">Related Rates - Recitation Practice</a></li></p>
+				<p><li><a href="RelatedRatesWorksheetSols.pdf">Related Rates - Extra Practice Detailed Solutions</a></li></p>
+				<!--<p><li><a href="LHSols.pdf">L'Hopital's Rule</a></li></p>
 				<p><li><a href="141RiemannSumSols.pdf">Riemann Sums Project</a></li></p>
 				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution 11/27 Handout</a></li></p>
 				<p><li><a href="VolumeSummary.pdf">Dr. Girardi's Volume Summary</a></li></p>-->
@@ -73,9 +75,10 @@
 				<h2>Activities & Blank Worksheets</h2>
 				<p><li><a href="141Ch1Review.pdf">Chapter 1 In-Class Review</a></li></p>
 				<p><li><a href="DefinitionofDerivative.pdf">Derivatives Using the Definition</a></li></p>
-				<!--<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation</a></li></p>
-				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates</a></li></p>
-				<p><li><a href="uSubPractice1.pdf">Sections 5.4-5.6 Practice</a></li></p>
+				<p><li><a href="ImplicitDifferentiationWorksheet.pdf">Implicit Differentiation - Extra Practice</a></li></p>
+				<p><li><a href="RelatedRates.pdf">Related Rates - Recitation Practice</a></li></p>
+				<p><li><a href="RelatedRatesWorksheet.pdf">Related Rates - Extra Practice (Solutions at the bottom)</a></li></p>
+				<!--<p><li><a href="uSubPractice1.pdf">Sections 5.4-5.6 Practice</a></li></p>
 				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
