--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -58,6 +58,7 @@
 				<p><li><a href="PracticeProblemsExam2.pdf">Exam 2 Practice</a><a href="PracticeExam2Sols.pdf"> - Solutions</a></li></p>
 				<h2>Exams</h2>
 				<p><li><a href="Exam1.pdf">Exam 1</a><a href="141S18Exam1Sols.pdf"> - Solutions</a></li></p>
+				<p><li><a href="141S18Exam2.pdf">Exam 2</a><a href="141S18Exam2Sols.pdf"> - Solutions</a></li></p>
 				<!--<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
 				<p><li><a href="F17Exam2.pdf">Exam 2</a></li></p>
 				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>-->
