--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -56,6 +56,7 @@
 				<p><li><a href="PracticeProblemsExam1.pdf">Exam 1 Practice</a><a href="practiceExam1Sols.pdf"> - Solutions</a></li></p>
 				<p><li><a href="MorePracticeExam1.pdf">More Practice for Exam 1</a><a href="MorePracticeExam1Sols.pdf"> - Solutions</a></li></p>
 				<p><li><a href="PracticeProblemsExam2.pdf">Exam 2 Practice</a><a href="PracticeExam2Sols.pdf"> - Solutions</a></li></p>
+				<p><li><a href="PracticeProblemsExam3.pdf">Exam 3 Practice</a></li></p>
 				<h2>Exams</h2>
 				<p><li><a href="Exam1.pdf">Exam 1</a><a href="141S18Exam1Sols.pdf"> - Solutions</a></li></p>
 				<p><li><a href="141S18Exam2.pdf">Exam 2</a><a href="141S18Exam2Sols.pdf"> - Solutions</a></li></p>
