--- a/courses/141/Spring18/LectureNotes.html
+++ b/courses/141/Spring18/LectureNotes.html
@@ -98,8 +98,8 @@
 				<p><li><a href="LectureNotes/Chapter5/S1to2Complete.pdf">Sections 5.1-5.2 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S3ThomasComplete.pdf">Section 5.3 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter5/S4ThomasComplete.pdf">Section 5.4 (Complete)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S5Thomas(Outline).pdf">Section 5.5 (Outline)</a></li></p>
-				<p><li><a href="LectureNotes/Chapter5/S6Thomas(Outline).pdf">Section 5.6 (Outline)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S5ThomasComplete.pdf">Section 5.5 (Complete)</a></li></p>
+				<p><li><a href="LectureNotes/Chapter5/S6ThomasComplete.pdf">Section 5.6 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter6/S1(Thomas)Complete.pdf">Section 6.1 (Complete)</a></li></p>
 				<p><li><a href="LectureNotes/Chapter6/S2(Thomas)Complete.pdf">Section 6.2 (Complete)</a></li></p>
 				
