--- a/courses/141/Spring18/Worksheets.html
+++ b/courses/141/Spring18/Worksheets.html
@@ -67,6 +67,7 @@
 				<p><li><a href="uSubPractice2Sols.pdf">u-Substitution Recitation Solutions</a></li></p>
 				<p><li><a href="definiteintegraldominoessol.pdf">Definite Integral Dominoes Solution</a></li></p>
 				<p><li><a href="RecognizeIntegralsSols.pdf">Substitution 5.5 Recognizing Integrals Solutions</a></li></p>
+				<p><li><a href="AreaBetweenCurvesSols.pdf">Area Between Curves</a></li></p>
 			</div>
 		</div>
 
@@ -81,8 +82,7 @@
 				<p><li><a href="Identifying_Substitutions_Worksheet.pdf">u-Substitution Recitation Worksheet</a></li></p>
 				<p><li><a href="RecognizeIntegrals.pdf">Substitution 5.5 Recognizing Integrals Recitation Worksheet</a></li></p>
 				<p><li><a href="more_integral_dominoes.pdf">Definite Integral Dominoes</a></li></p>
-				<!--<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
-				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
+				<p><li><a href="AreaBetweenCurves.pdf">Area Between Curves</a></li></p>
 			</div>
 		</div>
 
