--- a/courses/141/Spring18/Quizzes.html
+++ b/courses/141/Spring18/Quizzes.html
@@ -60,6 +60,9 @@
 				<p><li><a href="S18Quiz5Ch3S78.pdf">Quiz 5 - 3.6, 3.7</a></li></p>
 				<p><li><a href="S18Quiz6Ch3S89.pdf">Quiz 6 - 3.8, 3.9</a></li></p>
 				<p><li><a href="S18Quiz7Ch4S1to3.pdf">Quiz 7 - 4.1-4.3</a></li></p>
+				<p>Quiz 8 - Attendance Quiz</p>
+				<p><li><a href="S18Quiz8.pdf">Quiz 9 - 4.8-5.2</a></li></p>
+				<p>Quiz 10 - Attendance Quiz</p>
 				<h2>Quiz Solutions</h2>
 				<p><li><a href="Quiz1Sols.pdf">Quiz 1 - Ch. 1</a></li></p>
 				<p><li><a href="141S18Quiz2Sols.pdf">Quiz 2 - Sections 2.2, 2.4, 2.5</a></li></p>
@@ -67,6 +70,7 @@
 				<p><li><a href="S18Quiz5Sols.pdf">Quiz 5 - Sections 3.6, 3.7</a></li></p>
 				<p><li><a href="S18Quiz6Ch3S89Sols.pdf">Quiz 6 - 3.8, 3.9</a></li></p>
 				<p><li><a href="Quiz7Ch4S1to3Sols.pdf">Quiz 7 - 4.1-4.3</a></li></p>
+				<p><li><a href="S18Quiz8Sols.pdf">Quiz 9 - 4.8-5.2</a></li></p>
 				<!--<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
 				<p><li><a href="Quiz8Sols.pdf">Quiz 8</a></li></p>
 				<p><li><a href="Quiz9Sols.pdf">Quiz 9</a></li></p>-->
