--- a/courses/141/Spring18/Exams.html
+++ b/courses/141/Spring18/Exams.html
@@ -60,14 +60,8 @@
 				<h2>Exams</h2>
 				<p><li><a href="Exam1.pdf">Exam 1</a><a href="141S18Exam1Sols.pdf"> - Solutions</a></li></p>
 				<p><li><a href="141S18Exam2.pdf">Exam 2</a><a href="141S18Exam2Sols.pdf"> - Solutions</a></li></p>
-				<!--<p><li><a href="S17Exam1B.pdf">Exam 1 Version B</a></li></p>
-				<p><li><a href="F17Exam2.pdf">Exam 2</a></li></p>
-				<p><li><a href="F17Exam3.pdf">Exam 3</a></li></p>-->
-				<!--<h2>Exam Solutions</h2>
-				<p><li><a href="141S18Exam1Sols.pdf">Exam 1 Sols</a></li></p>
-				<p><li><a href="141exam1BSols.pdf">Exam 1 B Sols</a></li></p>	
-				<p><li><a href="F17Exam2Sols.pdf">Exam 2 Sols</a></li></p>
-				<p><li><a href="141F17Exam3Sols.pdf">Exam 3 Sols</a></li></p>-->
+				<p><li><a href="141S18Exam3.pdf">Exam 3</a><a href="141S18Exam3Sols.pdf"> - Solutions</a></li></p>
+				
 			</div>
 		</div>
 
