--- a/teaching.html
+++ b/teaching.html
@@ -60,11 +60,12 @@
 		
 		<h3>Current Courses</h3>
 		<p><ul>
-	    <li><a href="courses/141/Spring18/teaching.html">Math 141 Spring 2018</a></li>
-	    <li><a href="courses/142/Spring18/teaching.html">Math 142 Spring 2018</a></li>
+	    <li><a href="courses/122/Summer18/teaching.html">Math 122 Summer II 2018</a></li>
 	  </ul></p>
 		<h2>Past Courses</h2>
 		<h3>University of South Carolina</h3>
+		<p>Math 141 Spring 18</p>
+		<p>Math 142 Spring 2018</p>
 		<p>Math 122 Fall 17</p>
 		<p>Math 141 Fall 17</p>
 		<p>Math 122 Summer 2017</p>
