--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -53,8 +53,8 @@
 		<div id="trio1">
 			<div class="inner">
 				<h2>Worksheet Solutions</h2>
-				<!--<p><li><a href="AlgebraTrigReview.pdf">Paul's Online Math Notes - Algebra/Trig Review</a></li></p>
-				<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
+				<p><li><a href="FactoringTwoTruthsOneLieSols.pdf">Day 1 Worksheet (Factoring/Algebra Review)</a></li></p>
+				<!--<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
 				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 1 (Chapter 3)</a></li></p>
 				<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
@@ -68,12 +68,12 @@
 
 		<div id="trio2">
 			<div class="inner">
-				<h2>Activities & Blank Worksheets</h2>
-				<!--<p><li><a href="RiemannSums.pdf">Riemann Sums (In Class Handout)</a></li></p>
-				<p><li><a href="ApproximatingAreaUnderACurve.pdf">Approximating Area Under a Curve: Riemann Sums (includes solutions)</a></li></p>
-				<p><li><a href="Ch56Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
-				<p><li><a href="FinalExamBingoQuestions.pdf">Final Exam Bingo</a></li></p>
-				<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
+				<h2>Handouts & Blank Worksheets</h2>
+				<p><li><a href="FactoringTwoTruthsOneLie.pdf">Day 1 Worksheet (Factoring/Algebra Review)</a></li></p>
+				<p><li><a href="122AlgebraReview.pdf">Exam 1 Extra Credit - Algebra Review</a></li></p>
+				<p><li><a href="ParentFunctions.pdf">Parent Functions Reference Sheet</a></li></p>
+				<p><li><a href="FunctionTransformations.pdf">Function Transformations</a></li></p>
+				<!--<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
 				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
 			</div>
