--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -54,8 +54,8 @@
 			<div class="inner">
 				<h2>Worksheet Solutions</h2>
 				<p><li><a href="FactoringTwoTruthsOneLieSols.pdf">Day 1 Worksheet (Factoring/Algebra Review)</a></li></p>
-				<!--<p><li><a href="Worksheet2Sols.pdf">Worksheet 2 (Section 1.8)</a></li></p>
-				<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
+				<p><li><a href="Ch1Sec2to4PracticeSols.pdf">Worksheet 2 (Sections 1.2-1.4)</a></li></p>
+				<!--<p><li><a href="Worksheet3Sols.pdf">Worksheet 3 (Sections 2.1-2.2)</a></li></p>
 				<p><li><a href="Worksheet4Sols.pdf">Worksheet 1 (Chapter 3)</a></li></p>
 				<p><li><a href="122RiemannSumSols.pdf">Riemann Sums (In Class Handout)</a></li></p>
 				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
@@ -70,11 +70,11 @@
 			<div class="inner">
 				<h2>Handouts & Blank Worksheets</h2>
 				<p><li><a href="FactoringTwoTruthsOneLie.pdf">Day 1 Worksheet (Factoring/Algebra Review)</a></li></p>
+				<p><li><a href="Sections2to4PracticeProblems.pdf">Worksheet 2 (Sections 1.2-1.4)</a></li></p>
 				<p><li><a href="122AlgebraReview.pdf">Exam 1 Extra Credit - Algebra Review</a></li></p>
 				<p><li><a href="ParentFunctions.pdf">Parent Functions Reference Sheet</a></li></p>
 				<p><li><a href="FunctionTransformations.pdf">Function Transformations</a></li></p>
-				<!--<p><li><a href="SolarEnergy.pdf">Exam 3 Extra Credit Project: Solar Energy</a></li></p>
-				<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
+				<!--<p><li><a href="Differentiation.pdf">Chapter 3 Differentiation Worksheet</a></li></p>
 				<p><li><a href="122DerWksht.pdf">Derivative Practice (includes solutions)</a></li></p>-->
 			</div>
 		</div>
