--- a/courses/122/Summer18/Quizzes.html
+++ b/courses/122/Summer18/Quizzes.html
@@ -57,8 +57,11 @@
 				<p><li><a href="Quiz3.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
 				<p><li><a href="WrittenHW2.pdf">Take-Home Quiz 1: Ch. 1, Due Oct. 11</a></li></p>-->
 				<h2>Quiz Solutions</h2>
-				<!--<p><li><a href="Quiz1Sols.pdf">Quiz 2: Sections 1.1-1.3</a></li></p>
-				<p><li><a href="Quiz3Sols.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
+				<p><li>Quiz 1: Attendance Quiz</li></p>
+				<p><li><a href="AvgInstRoCSols.pdf">Quiz 2: Average and Instantaneous Rate of Change</a></li></p>
+				<p><li><a href="GradeThisDerivativeQuizSols.pdf">Quiz 3: Grade This Derivative Quiz</a></li></p>
+				<p><li>Quiz 4: Attendance Quiz</li></p>
+				<!--<p><li><a href="Quiz3Sols.pdf">Quiz 3: Sections 1.4-1.5</a></li></p>
 				<p><li><a href="takeHome1Sols.pdf">Take-Home Quiz 1 Solutions</a></li></p>
 				<p><li><a href="quiz5Sols.pdf">Quiz 5</a></li></p>
 				<p><li><a href="Sum17Quiz6Sols.pdf">Quiz 6</a></li></p>
