--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -61,6 +61,8 @@
 				<p><li><a href="Sum18Exam1PracticeSols.pdf">Exam 1 Practice Problems</a></li></p>
 				<p><li><a href="122AlgebraReviewSols.pdf">Exam 1 Extra Credit - Algebra Review</a></li></p>
 				<p><li><a href="Ch3DifferentiationSols.pdf">Chapter 3 Differentiation</a></li></p>
+				<p><li><a href="ProdQuotSols.pdf">Product and Quotient Rule Practice</a></li></p>
+				<p><li><a href="ChainRuleSols.pdf">Chain Rule Practice</a></li></p>
 				<p><li><a href="PracticeExam2Sols.pdf">Exam 2 Practice Problems</a></li></p>
 				<!--<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
 				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
@@ -85,6 +87,7 @@
 				<p><li><a href="ChainRule.pdf">Chain Rule Practice</a></li></p>
 				<p><li><a href="DerivativeFillBlank.pdf">Fill in the Blank - Derivative Concepts</a></li></p>
 				<p><li><a href="Ch3Differentiation.pdf">Chapter 3 Differentiation</a></li></p>
+				<p><li><a href="InstRoC.pdf">Average and Instantaneous Rate of Change (includes solutions)</a></li></p>
 				<p><li><a href="PracticeExam2.pdf">Exam 2 Practice Problems</a></li></p>
 			</div>
 		</div>
