--- a/courses/122/Summer18/Worksheets.html
+++ b/courses/122/Summer18/Worksheets.html
@@ -64,9 +64,10 @@
 				<p><li><a href="ProdQuotSols.pdf">Product and Quotient Rule Practice</a></li></p>
 				<p><li><a href="ChainRuleSols.pdf">Chain Rule Practice</a></li></p>
 				<p><li><a href="PracticeExam2Sols.pdf">Exam 2 Practice Problems</a></li></p>
-				<!--<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice Problems</a></li></p>
-				<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
+				<p><li><a href="Ch56PracticeSols.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 				<p><li><a href="solarsols.pdf">Solar Energy and Riemann Sums Solutions</a></li></p>
+				<p><li><a href="DefIntegralDomSols.pdf">Definite Integral Dominoes Solutions by Hand</a></li></p>
+				<!--<p><li><a href="uSubSols.pdf">Integration by Substitution Solutions</a></li></p>
 				<p><li><a href="BingoSols.pdf">Final Exam Bingo (Solutions - not in order!)</a></li></p>-->
 				
 			</div>
@@ -89,6 +90,7 @@
 				<p><li><a href="Ch3Differentiation.pdf">Chapter 3 Differentiation</a></li></p>
 				<p><li><a href="InstRoC.pdf">Average and Instantaneous Rate of Change (includes solutions)</a></li></p>
 				<p><li><a href="PracticeExam2.pdf">Exam 2 Practice Problems</a></li></p>
+				<p><li><a href="Ch561to3Practice.pdf">Sections 5.1-5.3, 5.5, 6.1-6.3 Practice</a></li></p>
 			</div>
 		</div>
 
